# compiler

./: CMakeLists.txt  README.md
sc_complier/: CMakeLists.txt  CMakeLists.txt~  main.cpp
sc_complier/demo/: color_token_demo.c  indent_demo.c  indent_demo.c~  symtab_demo.c  symtab_demo.c~
sc_complier/syntax_analysier/: Stack.cpp  Stack.h  Symbol.cpp  Symbol.h  external_declaration.h  syn_const.h  syntax_analysier.cpp  syntax_analysier.h
sc_complier/token_analysier/: DynArray.cpp  DynArray.h  DynArrayDef.h  DynString.cpp  DynString.h  DynStringDef.h  Exception_Handler.cpp  Exception_Handler.h  TKTable.h  TkTable.cpp  TkWordDef.h  TokenCode.h  TokenParser.cpp  TokenParser.h  global_var.h
ycc/: .gitignore  CMakeLists.txt  Readme  main.cpp  testFilename.txt
ycc/include/: Lex.h  Memory.h  Token.h  buffer.h  code_gen.h  colors.h  configuration.h  debug.h  encode.h  enumerate.h  error.h  float.h  keyword.inc  macro.h  parser.h  path.h  stddef.h  utils.h
ycc/snip/: base  base.c  base.s  gbase.s  noinclude.s
ycc/src/: Lex.cpp  Memory.cpp  Token.cpp  buffer.cpp  code_gen.cpp  code_gen1.cpp  debug.cpp  encode.cpp  error.cpp  macro.cpp  parser.cpp  path.cpp  utils.cpp
ycc/test/: funcTest.cpp  funcTest.h  function.c  includeguard7.h  oldstyle.c  pointer.c  test.h~
